[package]
name = "covmatrix"
version = "0.1.0"
edition = "2024"
authors = ["Andreas Weiss <ajefweiss@gmail.com>"]
description = "A small crate that implements a covariance matrix and related functionality"
repository = "https://github.com/ajefweiss/rs-covmatrix"
readme = "README.md"
categories = ["science", "mathematics"]
keywords = ["math"]
license = "MIT License"

[dependencies]
itertools = "0.14.0"
nalgebra = { version = "0.33.2", features = ["rayon", "serde-serialize"] }
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] } 

[dev-dependencies]
approx = "0.5.1"
rand = "0.9.1"
rand_distr = "0.5.1"
rand_xoshiro = "0.7.0"
